# wolffia

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  nginx.conf  package-lock.json  package.json  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts
backend/: app.lua  config.lua  entrypoint.sh  init-db.sh
backend/migrations/: 001_initial.sql  002_recovery_codes.sql  003_user_settings.sql
backend/models/: folders.lua  notes.lua  recovery_codes.lua  sessions.lua  user_settings.lua  users.lua
src/: app.css  app.html  service-worker.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: api.ts  crypto.ts  offline.ts  portability.ts  scratchpad.ts  shortcuts.ts  sync.ts
src/lib/components/: ConflictModal.svelte  Editor.svelte  FindReplaceBar.svelte  FolderModal.svelte  ImportExportModal.svelte  MarkdownPreview.svelte  RecoveryCodesModal.svelte  SaveModal.svelte  SettingsModal.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte  ThemeController.svelte  VerticalTabBar.svelte  VirtualTextEditor.svelte
src/lib/stores/: app.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/auth/: +layout.svelte  +page.svelte
static/: manifest.json  sw.js
