[package]
name = "wolffia"
version = "0.1.0"
description = "E2EE Note-taking Workspace"
authors = ["Wolffia Project"]
edition = "2021"

[lib]
name = "wolffia_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
